--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 img {
-    width: 600px;
+    max-width: 600px;
     height: 600px;
 }
 
@@ -20,7 +20,6 @@ img {
     padding: 10px 20px;
     background-color: #4CAF50;
     color: white;
-    border: none;
     border-radius: 5px;
     cursor: pointer;
   }
@@ -55,10 +54,18 @@ img {
     position: absolute;
     top: 0;
     margin-left: 700px;
+    overflow: auto;
+    max-height: 700px;
+    padding: 30px;
+    max-width: 400px;
 }
 
 .rechazados{
     position: absolute;
     top: 0;
     margin-left: 1200px;
+    overflow: auto;
+    max-height: 700px;
+    padding: 30px;
+    max-width: 400px;
 }
